# substrate-erc20

./: Cargo.toml
pallets/erc20/: Cargo.toml
pallets/erc20/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
